--- a/style.css
+++ b/style.css
@@ -349,16 +349,16 @@ code {
 #top_nav.bg-light {
   color: #2d3436;
 }
-#top_nav.bg-light a {
+#top_nav.bg-light span {
   color: #2d3436;
 }
 #top_nav.bg-dark,
 #top_nav.bg-head {
-  color: #ffeaa7;
+  color: #ecf0f1;
 }
-#top_nav.bg-dark a,
-#top_nav.bg-head a {
-  color: #ffeaa7;
+#top_nav.bg-dark span,
+#top_nav.bg-head span {
+  color: #ecf0f1;
 }
 .header-container {
   width: 100%;
@@ -580,11 +580,6 @@ code {
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   line-height: 1;
 }
-@media (max-width: 47em) {
-  .main-container .sec_textblock .sec_textblock-title {
-    font-size: 3em;
-  }
-}
 .main-container .sec_textblock .sec_textblock-bgc {
   position: relative;
   min-height: 20vh;
@@ -595,13 +590,8 @@ code {
   position: absolute;
   right: 0;
   left: 0;
-  top: -10vh;
+  top: -15vh;
   z-index: -1;
-}
-@media (max-width: 47em) {
-  .main-container .sec_textblock .sec_textblock-bgc img {
-    display: none;
-  }
 }
 .main-container .sec_textblock .sec_textblock-discr {
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
@@ -613,8 +603,22 @@ code {
   border-radius: 1em;
 }
 @media (max-width: 47em) {
+  .main-container .sec_textblock .sec_textblock-title {
+    font-size: 3em;
+    position: relative;
+    z-index: 3;
+    line-height: 1.32;
+  }
+  .main-container .sec_textblock .sec_textblock-title span {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  .main-container .sec_textblock .sec_textblock-bgc img {
+    z-index: 1;
+  }
   .main-container .sec_textblock .sec_textblock-discr {
-    font-size: 16px;
+    font-size: 24px;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 0.2em;
   }
 }
 .main-container .contacts {
@@ -634,12 +638,14 @@ code {
   left: -3em;
   background-color: #93D283;
   border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
-  z-index: -1;
+  z-index: 1;
   background: linear-gradient(45deg, #ffbe76 0%, #f6e58d 100%);
   animation: morph 8s ease-in-out infinite;
   transition: all 1s ease-in-out;
 }
 .main-container .contacts .team-title {
+  position: relative;
+  z-index: 2;
   font-size: 5.33em;
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   line-height: 1;
@@ -663,7 +669,7 @@ code {
 .main-container .card {
   padding: 2em;
 }
-@media (max-width: 439px) {
+@media (max-width: 47em) {
   .main-container .card {
     padding: 10px;
   }
@@ -681,7 +687,6 @@ code {
   left: 0;
   background-color: #ecf0f1;
   overflow: hidden;
-  box-shadow: 3px 3px 33px #ddd;
 }
 .main-container .card_pic .card_bg::before {
   content: ' ';
