--- a/less/custom.less
+++ b/less/custom.less
@@ -576,7 +576,7 @@
 .gallery_bg {
     background-color: #2d3436;
     padding: 20vh 0;
-    margin: 10vh 0;
+    margin: 10vh 0 0;
 }
 
 .gallery {
