--- a/style.css
+++ b/style.css
@@ -838,7 +838,7 @@ code {
 .gallery_bg {
   background-color: #2d3436;
   padding: 20vh 0;
-  margin: 10vh 0;
+  margin: 10vh 0 0;
 }
 .gallery {
   width: 100%;
