--- a/less/base.less
+++ b/less/base.less
@@ -14,6 +14,12 @@ html, body {
 }
 
 
+// font-family: 'Baloo 2', cursive;
+// font-family: 'Barriecito', cursive;
+// font-family: 'PT Sans', sans-serif;
+// font-family: 'PT Sans Narrow', sans-serif;
+// font-family: 'PT Serif', serif;
+
 @baseFontSize: 18; 
 @baseLineHeight: 1.3; 
 @leading: @baseLineHeight * 1rem;
@@ -21,7 +27,7 @@ html, body {
 @narrow:'PT Sans Narrow', Helvetica, Arial, sans-serif;
 @serif:'PT Serif', Georgia, 'Times New Roman', Times, serif;
 @mono:'PT Mono', monospace;
-@logo: 'Noto Serif Display', serif;
+@logo: 'Barriecito', sans-serif;
 
 
 // @scale: 1.414;
