--- a/less/custom.less
+++ b/less/custom.less
@@ -19,10 +19,11 @@
     });
     
     .logo {
-        font-family: @logo;
+      //  font-family: @logo;
+        font-family: @sans;
         font-size: 1.6em;
         letter-spacing: 0.02em;
-        text-transform: uppercase;
+       // text-transform: uppercase;
          span {
             position: relative;
         }
@@ -89,9 +90,10 @@
         .logo {
             .upper(2em);
             font-family: @logo;
+          //  font-family: @narrow;
             font-size: 4em;
             letter-spacing: 0.3em;
-            text-transform: uppercase;  
+           // text-transform: uppercase;  
         }
         
          .description {
