--- a/less/base.less
+++ b/less/base.less
@@ -16,6 +16,7 @@ html, body {
 
 // font-family: 'Baloo 2', cursive;
 // font-family: 'Barriecito', cursive;
+// font-family: 'Barrio', cursive;
 // font-family: 'PT Sans', sans-serif;
 // font-family: 'PT Sans Narrow', sans-serif;
 // font-family: 'PT Serif', serif;
@@ -27,7 +28,7 @@ html, body {
 @narrow:'PT Sans Narrow', Helvetica, Arial, sans-serif;
 @serif:'PT Serif', Georgia, 'Times New Roman', Times, serif;
 @mono:'PT Mono', monospace;
-@logo: 'Barriecito', sans-serif;
+@logo: 'Barrio', sans-serif;
 
 
 // @scale: 1.414;
